# Viga

./: .gitignore  Detailed Implementation Doc.md  PRD.md  README.md  package-lock.json  package.json  tsconfig.base.json  turbo.json
Reference/: Tool Calling.md
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.js  vite.config.js.map  vite.config.ts
apps/desktop/src/: App.js  App.js.map  App.tsx  main.js  main.js.map  styles.css
apps/desktop/src/ai/: browserKeyStore.d.ts  browserKeyStore.js  browserKeyStore.js.map  browserKeyStore.ts  defaultModel.d.ts  defaultModel.js  defaultModel.js.map  defaultModel.ts
apps/desktop/src/canvas/: draft.d.ts  draft.js  draft.js.map  draft.ts
apps/desktop/src/components/: AiPanel.d.ts  AiPanel.js  AiPanel.js.map  AiPanel.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/export/: pdf.rs
