[package]
name = "viga-tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macros"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
keyring = "3"
printpdf = "0.8"

[build-dependencies]
tauri-build = { version = "2", features = [] }
